Button: Border for secondary button in dark mode

--- a/app/frontend/app.css
+++ b/app/frontend/app.css
@@ -100,7 +100,7 @@
     --button-bg: transparent;
     --button-fg: #CDCDCD;
     --button-border: #CDCDCD;
-    --button-secondary-line: #A1E4DA;
+    --button-secondary-line: #a1e4da91;
     --shadow-color: 107, 107, 108; /* #6B6B6C */
     --chat-bubble-incoming-bg: #1d2628;
     --chat-bubble-incoming-fg: #CCCCCC;
