--- a/app/frontend/app.css
+++ b/app/frontend/app.css
@@ -212,6 +212,7 @@ input[type="email"],
 input[type="url"],
 input[type="date"],
 input[type="time"],
+input[type="search"],
 input[type="text"] {
   background-color: var(--input-bg);
   color: var(--input-fg);
