--- a/app/frontend/app.css
+++ b/app/frontend/app.css
@@ -206,6 +206,16 @@ value,
   user-select: text;
 }
 
+.font-smallest {
+  font-size: 12px;
+}
+.font-small {
+  font-size: 14px;
+}
+.font-normal {
+  font-size: 16px;
+}
+
 input[type="number"],
 input[type="password"],
 input[type="email"],
