UI: Break long words, to avoid breaking the UI

--- a/app/frontend/app.css
+++ b/app/frontend/app.css
@@ -205,6 +205,10 @@ value,
 .selectable {
   user-select: text;
 }
+value,
+.value {
+  overflow-wrap: anywhere;
+}
 
 .font-smallest {
   font-size: 12px;
