--- a/mobile/android/app/src/main/res/xml/file_paths.xml
+++ b/mobile/android/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="my_images" path="." />
+    <external-files-path name="attachments" path="."/>
+    <files-path
+        name="attachments"
+        path="config/files/email/" />
+
     <cache-path name="my_cache_images" path="." />
 </paths>
