SML: Book me: Edit+View

--- a/app/frontend/app.css
+++ b/app/frontend/app.css
@@ -219,6 +219,9 @@ value,
 .font-normal {
   font-size: 16px;
 }
+.font-large {
+  font-size: 24px;
+}
 .mobile .font-smallest {
   font-size: 14px;
 }
